update no wa sama gw jadi aku

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@ var audio = new Audio('lagu.mp3');audio.play();}
                 });
    if(hasiljawab && hasiljawab.length < 16){      
    window.hasiljawab = hasiljawab;          	
-   await swals.fire('Makasi dah mau jawab <3', 'Nanti kirim jawabannya ke WhatsApp gw ya!');   
-   window.location = "https://api.whatsapp.com/send?phone=6282119907781&text= " + window.hasiljawab;
+   await swals.fire('Makasi dah mau jawab <3', 'Nanti kirim jawabannya ke WhatsApp aku aja ya sayanggkku!');   
+   window.location = "https://api.whatsapp.com/send?phone=628569836114&text= " + window.hasiljawab;
    } else { await swals.fire('Ups!', 'Tidak boleh kosong atau lebih dari 15 karakter, ya!'); reaksi();}
    } 
 </script>
