--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body{background-image: url("https://i.pinimg.com/originals/86/d0/87/86d087c26a09
   <br>
 <br> -->
 <!-- <div><center><b>HM</b></center></div><br> -->
-<div id="tomAksi"><a class='button' onClick='reaksi();'>Balas Pesan!</a></div>
+<div id="tomAksi" style="margin-top: 1cm"><a class='button' onClick='reaksi();'>Balas Pesan!</a></div>
 
 </div>
 
