--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ body{background-image: url("https://i.pinimg.com/originals/86/d0/87/86d087c26a09
 var u=0,penutup;penutup = "Untuk lisan yang tidak terjaga, untuk janji yang terabaikan, untuk hati yang berprasangka, untuk sikap yang menyakitkan, maka di hari yang fitri ini dengan setulus hati kabir ucapkan minal aidzin wal faidzin mohon maaf lahir dan batin.                                               ";
 
 function play() {//Link Audio Bisa Diganti
-var audio = new Audio('lagu.mp3');audio.play();}         
+var audio = new Audio('lagu1.mp3');audio.play();}         
 
 //Reaksi
  async function reaksi(){
