--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body{background-image: url("https://i.pinimg.com/originals/86/d0/87/86d087c26a09
 </div>
 
 <!-- Teks, Lagu --><script>
-var u=0,penutup;penutup = "Untuk lisan yang tidak terjaga, untuk janji yang terabaikan, untuk hati yang berprasangka, untuk sikap yang menyakitkan, maka di hari yang fitri ini dengan setulus hati kabir ucapkan minal aidzin wal faidzin mohon maaf lahir dan batin.                                               ";
+var u=0,penutup;penutup = "Mamah, yudha sangat bahagia terlahir sebagai anakmu. Aku selalu ingin mendampingimu, bersamamu. Aku tidak akan pernah menjadi seperti ini tanpa jerih payahmu. Semoga mamah dan juga Ayah sehat selalu dan bahagia dunia akhirat..                                               ";
 
 function play() {//Link Audio Bisa Diganti
 var audio = new Audio('lagu1.mp3');audio.play();}         
@@ -56,7 +56,7 @@ var audio = new Audio('lagu1.mp3');audio.play();}
                 });
    if(hasiljawab && hasiljawab.length < 5000){      
    window.hasiljawab = hasiljawab;          	
-   await swals.fire('Makasi dah mau jawab <3', 'Nanti kirim jawabannya ke WhatsApp aku aja ya sayanggkku!');   
+   await swals.fire('Makasi dah mau jawab <3', 'Nanti kirim jawabannya ke WhatsApp yudha aja ya mam!');   
    window.location = "https://api.whatsapp.com/send?phone=6285693836114&text= " + window.hasiljawab;
    } else { await swals.fire('Ups!', 'Tidak boleh kosong atau lebih dari 5000 karakter, ya!'); reaksi();}
    } 
@@ -69,24 +69,24 @@ var audio = new Audio('lagu1.mp3');audio.play();}
             });
             async function mulai(){
                  await swals.fire({
-                  title: ' Halo Fayla sayangggg 😚', 
+                  title: ' Halo mamah aku tersayangggg 😚', 
                   imageUrl: 'https://i.pinimg.com/originals/d7/72/17/d772177006a4b02591beda745de3055c.gif',
                   imageWidth: 120, imageHeight: 120,
                  });  
                  play();	
                  await swals.fire({
-                  title: ' Selamat hari raya idul fitri yahh 🥰',
+                  title: ' Selamat hari ulang tahunnn yahh 🥰',
                   imageUrl: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ8grzXmu9QapL7gG91rekAhT8LYmuaY2Nbeyh_kIzI4oy00GmeoxZo5J21JIjbspFbEkQ&usqp=CAU',
                   imageWidth: 120, imageHeight: 120,
                  }); 
                  	
                  await swals.fire({
-                  title: ' Minal aidzin wal faidzin  😇',
-                  imageUrl: 'https://cdn.kibrispdr.org/data/stiker-wa-kucing-kartun-9.jpg',
+                  title: ' semoga sehat selaluu, panjang umur, dan selalu diberikan rezeki yang berlimpah 😇',
+                  imageUrl: 'https://i.pinimg.com/originals/d7/72/17/d772177006a4b02591beda745de3055c.gif',
                   imageWidth: 120, imageHeight: 100,
                  });
                  await swals.fire({
-                  title: ' Kalo aku salah maafin aja si, kan cowo selalu salahh 🤪 ',
+                  title: ' maaf kalo yudha selalu membuat mamah sedih & belum bisa memberikan yang terbaik 🤪 ',
                   imageUrl: 'https://i.pinimg.com/originals/17/a9/46/17a946921da91360e395d666e9813258.gif',
                   imageWidth: 120, imageHeight: 120,
                  });
