ganti nama dari yudha menjadi kabir

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body{background-image: url("https://i.pinimg.com/originals/86/d0/87/86d087c26a09
 </div>
 
 <!-- Teks, Lagu --><script>
-var u=0,penutup;penutup = "Mamah, yudha sangat bahagia terlahir sebagai anakmu. Aku selalu ingin mendampingimu, bersamamu. Aku tidak akan pernah menjadi seperti ini tanpa jerih payahmu. Semoga mamah dan juga Ayah sehat selalu dan bahagia dunia akhirat..                                               ";
+var u=0,penutup;penutup = "Mamah, Kabir sangat bahagia terlahir sebagai anakmu. Aku selalu ingin mendampingimu, bersamamu. Aku tidak akan pernah menjadi seperti ini tanpa jerih payahmu. Semoga mamah dan juga Ayah sehat selalu dan bahagia dunia akhirat..                                               ";
 
 function play() {//Link Audio Bisa Diganti
 var audio = new Audio('lagu1.mp3');audio.play();}         
@@ -56,7 +56,7 @@ var audio = new Audio('lagu1.mp3');audio.play();}
                 });
    if(hasiljawab && hasiljawab.length < 5000){      
    window.hasiljawab = hasiljawab;          	
-   await swals.fire('Makasi dah mau jawab <3', 'Nanti kirim jawabannya ke WhatsApp yudha aja ya mam!');   
+   await swals.fire('Makasi dah mau jawab <3', 'Nanti kirim jawabannya ke WhatsApp Kabir aja ya mam!');   
    window.location = "https://api.whatsapp.com/send?phone=6287803447778&text= " + window.hasiljawab;
    } else { await swals.fire('Ups!', 'Tidak boleh kosong atau lebih dari 5000 karakter, ya!'); reaksi();}
    } 
@@ -86,7 +86,7 @@ var audio = new Audio('lagu1.mp3');audio.play();}
                   imageWidth: 120, imageHeight: 100,
                  });
                  await swals.fire({
-                  title: ' maaf kalo yudha selalu membuat mamah sedih & belum bisa memberikan yang terbaik 🤪 ',
+                  title: ' maaf kalo Kabir selalu membuat mamah sedih & belum bisa memberikan yang terbaik 🤪 ',
                   imageUrl: 'https://i.pinimg.com/originals/17/a9/46/17a946921da91360e395d666e9813258.gif',
                   imageWidth: 120, imageHeight: 120,
                  });
