ubah jadi selamat hari ibu

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body{background-image: url("https://i.pinimg.com/originals/86/d0/87/86d087c26a09
 </div>
 
 <!-- Teks, Lagu --><script>
-var u=0,penutup;penutup = "Mamah, Kabir sangat bahagia terlahir sebagai anakmu. Aku selalu ingin mendampingimu, bersamamu. Aku tidak akan pernah menjadi seperti ini tanpa jerih payahmu. Semoga mamah dan juga Ayah sehat selalu dan bahagia dunia akhirat..                                               ";
+var u=0,penutup;penutup = "mamski, abiw sangat bahagia terlahir sebagai anakmu. abiw selalu ingin mendampingimu, bersamamu. abiw tidak akan pernah menjadi seperti ini tanpa jerih payahmu. Semoga mamski dan juga papski sehat selalu dan bahagia dunia akhirat..                                               ";
 
 function play() {//Link Audio Bisa Diganti
 var audio = new Audio('lagu1.mp3');audio.play();}         
@@ -56,8 +56,8 @@ var audio = new Audio('lagu1.mp3');audio.play();}
                 });
    if(hasiljawab && hasiljawab.length < 5000){      
    window.hasiljawab = hasiljawab;          	
-   await swals.fire('Makasi dah mau jawab <3', 'Nanti kirim jawabannya ke WhatsApp Kabir aja ya mam!');   
-   window.location = "https://api.whatsapp.com/send?phone=6287803447778&text= " + window.hasiljawab;
+   await swals.fire('Makasi dah mau jawab <3', 'Nanti kirim jawabannya ke WhatsApp kabir aja ya mam!');   
+   window.location = "https://api.whatsapp.com/send?phone=6285693836114&text= " + window.hasiljawab;
    } else { await swals.fire('Ups!', 'Tidak boleh kosong atau lebih dari 5000 karakter, ya!'); reaksi();}
    } 
 </script>
@@ -69,13 +69,13 @@ var audio = new Audio('lagu1.mp3');audio.play();}
             });
             async function mulai(){
                  await swals.fire({
-                  title: ' Halo mamah aku tersayangggg 😚', 
+                  title: ' Halo mamski aku tersayangggg 😚', 
                   imageUrl: 'https://i.pinimg.com/originals/d7/72/17/d772177006a4b02591beda745de3055c.gif',
                   imageWidth: 120, imageHeight: 120,
                  });  
                  play();	
                  await swals.fire({
-                  title: ' Selamat hari ulang tahunnn yahh 🥰',
+                  title: ' Selamat hari ibu mamski tercantik sedunia 🥰',
                   imageUrl: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ8grzXmu9QapL7gG91rekAhT8LYmuaY2Nbeyh_kIzI4oy00GmeoxZo5J21JIjbspFbEkQ&usqp=CAU',
                   imageWidth: 120, imageHeight: 120,
                  }); 
@@ -86,7 +86,7 @@ var audio = new Audio('lagu1.mp3');audio.play();}
                   imageWidth: 120, imageHeight: 100,
                  });
                  await swals.fire({
-                  title: ' maaf kalo Kabir selalu membuat mamah sedih & belum bisa memberikan yang terbaik 🤪 ',
+                  title: ' maaf kalo kabir selalu membuat mamah sedih & belum bisa memberikan yang terbaik 🤪 ',
                   imageUrl: 'https://i.pinimg.com/originals/17/a9/46/17a946921da91360e395d666e9813258.gif',
                   imageWidth: 120, imageHeight: 120,
                  });
